Fix author profile links `z-index` order on small screens
Close #2440

--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -236,7 +236,6 @@
   border: 1px solid $border-color;
   border-radius: $border-radius;
   background: $background-color;
-  z-index: -1;
   box-shadow: 0 2px 4px 0 rgba(#000, 0.16), 0 2px 10px 0 rgba(#000, 0.12);
   cursor: default;
 
